# Telegram-Data-Labeling-Bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  faa7b5a268ae_add_created_at_to_items.py
bot/: __main__.py  config.py  keyboards.py
bot/db/: models.py  session.py
bot/handlers/: admin.py  labeling.py
bot/middlewares/: auth.py
bot/services/: cleanup.py  data.py  items.py  lock.py
