[project]
name = "data-labeling-bot"
version = "0.1.0"
description = "Telegram bot for collaborative data labeling"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "redis[hiredis]>=5.0,<6",
    "py7zr>=0.22,<1",
    "polars>=1.0,<2",
    "pydantic-settings>=2.0,<3",
]

[tool.uv]
dev-dependencies = []
